[gd_scene load_steps=3 format=3 uid="uid://biinf5t6niyi1"]

[ext_resource type="Script" uid="uid://k5hncnk46hip" path="res://scripts/main_menu.gd" id="1_hu5rx"]

[sub_resource type="LabelSettings" id="LabelSettings_hu5rx"]
paragraph_spacing = 30.0
font_size = 40
font_color = Color(0.741385, 0.741385, 0.741385, 1)

[node name="About Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hu5rx")

[node name="AboutAndCredits" type="Label" parent="."]
layout_mode = 0
offset_left = 59.0
offset_top = 105.0
offset_right = 1122.0
offset_bottom = 488.0
text = "Kersplosion is a game made by Pumpkin with the help of my talented friends. 
[list of friends and their roles here]
The game was made out of love for hectic party games, explosive based classes and grenade launchers everywhere!"
label_settings = SubResource("LabelSettings_hu5rx")
autowrap_mode = 2

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 502.0
offset_top = 534.0
offset_right = 547.0
offset_bottom = 565.0
scale = Vector2(3.5105, 2.94542)
text = "Back
"

[node name="Website" type="Button" parent="."]
layout_mode = 0
offset_left = 991.0
offset_top = 605.0
offset_right = 1131.0
offset_bottom = 636.0
text = "PumpkinWebsite"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Website" to="." method="_on_website_pressed"]
