[gd_scene load_steps=4 format=3 uid="uid://c5km535kop030"]

[ext_resource type="Script" uid="uid://k5hncnk46hip" path="res://scripts/main_menu.gd" id="1_wqhvx"]
[ext_resource type="Texture2D" uid="uid://dqa6s7xp6b1g5" path="res://images/CharlieDefaultPose.png" id="1_y26ei"]

[sub_resource type="LabelSettings" id="LabelSettings_y26ei"]
font_size = 57
font_color = Color(1, 0, 0, 1)
shadow_size = 16
shadow_color = Color(0.392157, 0, 0, 1)

[node name="gameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_wqhvx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(566, 338)
scale = Vector2(5, 5)
texture = ExtResource("1_y26ei")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 408.0
offset_top = 178.0
offset_right = 735.0
offset_bottom = 256.0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_y26ei")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 516.0
offset_top = 486.0
offset_right = 623.0
offset_bottom = 517.0
text = "GOTO MENU"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
